--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,8 +7,14 @@
   color: #545454;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 920px) {
   .footer {
-    padding: 48px 19px 36px 19px;
+    padding: 70px 19px 54px 19px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .footer {
+    padding: 48px 19px 38px 19px;
   }
 }
