--- a/blocks/gallery/__photo/gallery__photo.css
+++ b/blocks/gallery/__photo/gallery__photo.css
@@ -1,8 +1,9 @@
 .gallery__photo {
-  grid-area: photo;
   border-radius: 10px 10px 0 0;
-  display: block;
-  width: 100%;
-  aspect-ratio: 1 / 1;
   object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
