--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,7 @@
   max-width: 880px;
   margin: 0 auto;
   padding: 43px 0 38px 0;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgba(#545454, .7);
 }
 
 @media screen and (max-width: 920px) {
