feat: добавить плавное появление/исчезание попапов

--- a/blocks/popup/__form-submit-button/popup__form-submit-button.css
+++ b/blocks/popup/__form-submit-button/popup__form-submit-button.css
@@ -9,6 +9,7 @@
   padding-top: 16px;
   padding-bottom: 13px;
   border-radius: 2px;
+  transition: background-color .2s linear;
 }
 
 .popup__form-submit-button:hover {
@@ -21,6 +22,5 @@
     font-size: 14px;
     padding-top: 15px;
     padding-bottom: 15px;
-
   }
 }
