--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,4 +9,7 @@
   justify-content: center;
   align-items: center;
   font-family: 'Inter', sans-serif;
+  visibility: visible;
+  opacity: 1;
+  transition: visibility .2s, opacity .2s linear;
 }
