feat: добавить валидацию форм на js

--- a/blocks/popup/__form-submit-button/popup__form-submit-button.css
+++ b/blocks/popup/__form-submit-button/popup__form-submit-button.css
@@ -1,7 +1,8 @@
 .popup__form-submit-button {
   background: none;
   border: none;
-  margin-top: 48px;
+  margin-top: 18px;
+  margin-bottom: 36px;
   background-color: #000;
   color: #fff;
   font-size: 18px;
