--- a/blocks/popup/__form-field/popup__form-field.css
+++ b/blocks/popup/__form-field/popup__form-field.css
@@ -6,7 +6,7 @@
   display: block;
   font-size: 14px;
   padding-bottom: 8px;
-  padding-top: 32px;
+  margin-bottom: 30px;
 }
 
 .popup__form-field:focus {
