feat: закрывать попап при клике по оверлею

--- a/blocks/popup/__form-submit-button/popup__form-submit-button.css
+++ b/blocks/popup/__form-submit-button/popup__form-submit-button.css
@@ -19,9 +19,10 @@
 
 @media screen and (max-width: 720px) {
   .popup__form-submit-button {
-    margin-top: 45px;
+    margin-top: 18px;
     font-size: 14px;
     padding-top: 15px;
     padding-bottom: 15px;
+    margin-bottom: 24px;
   }
 }
