--- a/blocks/popup/__form-warning/popup__form-warning.css
+++ b/blocks/popup/__form-warning/popup__form-warning.css
@@ -2,8 +2,8 @@
   color: #f00;
   font-size: 12px;
   font-family: 'Inter', sans-serif;
-  padding-top: 6px;
+  padding-top: 2px;
   display: none;
-  line-height: 18px;
-  padding-bottom: 6px;
+  min-height: 30px;
+  padding-bottom: 0px;
 }
