--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,7 +1,7 @@
 .popup__container {
   background-color: #fff;
   width: 430px;
-  min-height: 330px;
+  /* min-height: 330px; */
   border-radius: 10px;
   position: relative;
 }
@@ -9,6 +9,6 @@
 @media screen and (max-width: 720px) {
   .popup__container {
     width: 282px;
-    min-height: 322px;
+    /* min-height: 322px; */
   }
 }
