--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,7 +9,9 @@
 @import url(../blocks/main/main.css);
 
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__userpic/profile__userpic.css);
+@import url(../blocks/profile/__editpic/profile__editpic.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__status/profile__status.css);
@@ -23,8 +25,10 @@
 @import url(../blocks/gallery/__remove-button/gallery__remove-button.css);
 @import url(../blocks/gallery/__photo/gallery__photo.css);
 @import url(../blocks/gallery/__title/gallery__title.css);
+@import url(../blocks/gallery/__like/gallery__like.css);
 @import url(../blocks/gallery/__like-button/gallery__like-button.css);
 @import url(../blocks/gallery/__like-button/_active/gallery__like-button_active.css);
+@import url(../blocks/gallery/__like-count/gallery__like-count.css);
 
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_shown/popup_shown.css);
