--- a/src/blocks/popup/__form-submit-button/popup__form-submit-button.css
+++ b/src/blocks/popup/__form-submit-button/popup__form-submit-button.css
@@ -15,6 +15,7 @@
 
 .popup__form-submit-button:hover {
   background-color: rgba(0, 0, 0, .8);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 720px) {
