--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@
 .popup__form-field_error{border-bottom:1px solid red;margin-bottom:0}
 .popup__form-warning{color:red;display:none;font-family:Inter,sans-serif;font-size:12px;min-height:30px;padding-bottom:0;padding-top:2px}
 .popup__form-warning_active{display:block}
-.popup__form-submit-button{background:none;background-color:#000;border:none;border-radius:2px;color:#fff;font-size:18px;margin-bottom:36px;margin-top:18px;padding-bottom:13px;padding-top:16px;transition:background-color .2s linear;width:100%}.popup__form-submit-button:hover{background-color:rgba(0,0,0,.8)}@media screen and (max-width:720px){.popup__form-submit-button{font-size:14px;margin-bottom:24px;margin-top:18px;padding-bottom:15px;padding-top:15px}}
+.popup__form-submit-button{background:none;background-color:#000;border:none;border-radius:2px;color:#fff;font-size:18px;margin-bottom:36px;margin-top:18px;padding-bottom:13px;padding-top:16px;transition:background-color .2s linear;width:100%}.popup__form-submit-button:hover{background-color:rgba(0,0,0,.8);cursor:pointer}@media screen and (max-width:720px){.popup__form-submit-button{font-size:14px;margin-bottom:24px;margin-top:18px;padding-bottom:15px;padding-top:15px}}
 .popup__form-submit-button_error{background-color:#fff;border:1px solid #000;color:#000;opacity:.2}
 .popup__big-image-photo{background:none;max-height:75vh;max-width:75vw;width:100%;z-index:1}
 .popup__big-image-title{color:#fff;font-size:12px;font-weight:400;margin:0;padding-top:10px}
